--- a/DamarisServices/appsettings.json
+++ b/DamarisServices/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "dYfiSvvXosygDgSngezsSTqoamRIuWASNmHtCsZDfwCltrAMtA"
+  },
+  "ConnectionStrings": {
+    "DefaultMySqlConnection": "Server=localhost;Database=officer_prod;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
+    "PostGreSqlConnection": "Server=localhost;Port=5433;Database=officerlogger_prod;User Id=logdevuser;Password ='Army1122';Integrated Security=true;Pooling=true;"
+  }
 }
