Adding: -Kafka; -Languge; -Cache Memory Redis; -Damaris.Data; -Damaris.Domain;

--- a/DamarisServices/appsettings.json
+++ b/DamarisServices/appsettings.json
@@ -10,7 +10,10 @@
     "Secret": "dYfiSvvXosygDgSngezsSTqoamRIuWASNmHtCsZDfwCltrAMtA"
   },
   "ConnectionStrings": {
+    "DamarisGe2": "Server=localhost;Database=damaris_GE2;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
+    "DamarisOfficerContext": "Server=(localdb)\\mssqllocaldb;Database=DamarisOfficerContext-c0b2824d-78c0-474d-b053-d1c0993bc805;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DefaultMySqlConnection": "Server=localhost;Database=officer_prod;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
-    "PostGreSqlConnection": "Server=localhost;Port=5433;Database=officerlogger_prod;User Id=logdevuser;Password ='Army1122';Integrated Security=true;Pooling=true;"
+    "PostGreSqlConnection": "Server=localhost;Port=5433;Database=officerlogger_prod;User Id=logdevuser;Password ='Army1122';Integrated Security=true;Pooling=true;",
+    "RedisConnection": "localhost:6379,abortConnect=false"
   }
 }
