Implementing Kafka to connect with DataService

--- a/DamarisServices/appsettings.json
+++ b/DamarisServices/appsettings.json
@@ -15,5 +15,18 @@
     "DefaultMySqlConnection": "Server=localhost;Database=officer_prod;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
     "PostGreSqlConnection": "Server=localhost;Port=5433;Database=officerlogger_prod;User Id=logdevuser;Password ='Army1122';Integrated Security=true;Pooling=true;",
     "RedisConnection": "localhost:6379,abortConnect=false"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "Consumer": {
+      "GroupId": "damaris-consumer-group",
+      "AutoOffsetReset": "earliest",
+      "EnableAutoCommit": true
+    },
+    "Producer": {
+      "Acks": "all",
+      "Retries": 3,
+      "MaxInFlight": 5
+    }
   }
 }
