--- a/Damaris.Domain/Damaris.Domain.csproj
+++ b/Damaris.Domain/Damaris.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.10" />
   </ItemGroup>
 
 </Project>
