--- a/DamarisServices/DamarisServices.csproj
+++ b/DamarisServices/DamarisServices.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="ASpNetCore.Healthchecks.UI.Client" Version="7.1.0" />
+    <PackageReference Include="Confluent.Kafka" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
@@ -32,8 +34,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Damaris.DataService\Damaris.DataService.csproj" />
     <ProjectReference Include="..\Damaris.Domain\Damaris.Domain.csproj" />
     <ProjectReference Include="..\KafkaCommunicationLibrary\KafkaCommunicationLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\v2\" />
   </ItemGroup>
 
 </Project>
