--- a/DamarisServices/appsettings.json
+++ b/DamarisServices/appsettings.json
@@ -28,5 +28,8 @@
       "Retries": 3,
       "MaxInFlight": 5
     }
+  },
+  "KafkaServiceConfig": {
+    "BaseUri": "http://localhost:9092" // Replace with KafkaService base URL
   }
 }
