--- a/DamarisServices/DamarisServices.csproj
+++ b/DamarisServices/DamarisServices.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="ASpNetCore.Healthchecks.UI.Client" Version="7.1.0" />
     <PackageReference Include="Confluent.Kafka" Version="2.2.0" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.10" />
