Fixed Kafka ProducerAsync Task infinity

--- a/KafkaCommunicationLibrary/appsettings.json
+++ b/KafkaCommunicationLibrary/appsettings.json
@@ -9,13 +9,13 @@
   "Kafka": {
     "BootstrapServers": "localhost:9092",
     "Consumer": {
-      "GroupId": "damaris-data-group",
+      "GroupId": "damaris-kafka-group",
       "AutoOffsetReset": "earliest",
       "EnableAutoCommit": true
     },
     "Producer": {
-      "Acks": "all",
-      "Retries": 3,
+      "Acks": "Leader",
+      "RetriesBackoffMs": 100,
       "MaxInFlight": 5
     }
   }
