--- a/Damaris.DataService/appsettings.json
+++ b/Damaris.DataService/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DamarisGe2": "Server=localhost;Database=damaris_GE2;Uid=CosminArmenean;Pwd=@CAvp57rt26;"
+    "OfficerMySqlGe2": "Server=localhost;Database=damaris_GE2;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
+    "WatchDogPostGreSql": "Server=localhost;Port=5433;Database=epitomelogger_prod;User Id=dataserviceuser;Password ='DataServiceUser';Integrated Security=true;Pooling=true;"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092",
@@ -19,6 +20,7 @@
     "Producer": {
       "Acks": "all",
       "Retries": 3,
+      "RetriesBackoffMs": 100,
       "MaxInFlight": 5
     }
   }
