--- a/Damaris.DataService/Damaris.DataService.csproj
+++ b/Damaris.DataService/Damaris.DataService.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MySql.Data" Version="8.1.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="WatchDog.NET" Version="1.4.10" />
   </ItemGroup>
 
   <ItemGroup>
