Adding Common library

--- a/Damaris.DataService/appsettings.json
+++ b/Damaris.DataService/appsettings.json
@@ -13,7 +13,7 @@
   "Kafka": {
     "BootstrapServers": "localhost:9092",
     "Consumer": {
-      "GroupId": "damaris-data-group",
+      "GroupId": "innkt-authentication-group",
       "AutoOffsetReset": "earliest",
       "EnableAutoCommit": true
     },
