--- a/DamarisServices/appsettings.json
+++ b/DamarisServices/appsettings.json
@@ -19,7 +19,7 @@
   "Kafka": {
     "BootstrapServers": "localhost:9092",
     "Consumer": {
-      "GroupId": "damaris-identity-group",
+      "GroupId": "innkt-authentication-group",
       "AutoOffsetReset": "earliest",
       "EnableAutoCommit": true
     },
