--- a/KafkaCommunicationLibrary/appsettings.json
+++ b/KafkaCommunicationLibrary/appsettings.json
@@ -9,7 +9,7 @@
   "Kafka": {
     "BootstrapServers": "localhost:9092",
     "Consumer": {
-      "GroupId": "damaris-kafka-group",
+      "GroupId": "innkkkt-authentication-group",
       "AutoOffsetReset": "earliest",
       "EnableAutoCommit": true
     },
