--- a/Damaris.Common/Damaris.Common.csproj
+++ b/Damaris.Common/Damaris.Common.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="v1\DataAccess\" />
+    <Folder Include="v1\DataAccess\v2\" />
     <Folder Include="v1\Extensions\" />
     <Folder Include="v1\Services\" />
     <Folder Include="v2\CommonUtilities\JsonUtilities\" />
