--- a/Damaris.DataService/Damaris.DataService.csproj
+++ b/Damaris.DataService/Damaris.DataService.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.151" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
@@ -28,12 +29,13 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="WatchDog.NET" Version="1.4.10" />
+    <PackageReference Include="WatchDog.NET" Version="1.4.10" />	
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\v2\" />
     <Folder Include="Data\v2\" />
+    <Folder Include="MappingProfiles\v2\" />
     <Folder Include="Providers\v1\Generic\" />
     <Folder Include="Providers\v2\" />
     <Folder Include="Repositories\v1\Interfaces\Contracts\" />
@@ -47,9 +49,5 @@
     <ProjectReference Include="..\KafkaCommunicationLibrary\KafkaCommunicationLibrary.csproj" />
     <ProjectReference Include="..\LanguageService\LanguageService.csproj" />
   </ItemGroup>
-  <EntityFrameworkCore>
-  	<DbContextOptions>
-  		<OfficerDbContext>true</OfficerDbContext>
-  	</DbContextOptions>
-  </EntityFrameworkCore>
+   
 </Project>
