--- a/Damaris.Domain/Damaris.Domain.csproj
+++ b/Damaris.Domain/Damaris.Domain.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="v1\Dtos\Responses\" />
+    <Folder Include="v1\Dtos\Requests\" />
     <Folder Include="v1\Interfaces\KafkaInterfaces\" />
   </ItemGroup>
 
