--- a/Damaris.Officer/appsettings.json
+++ b/Damaris.Officer/appsettings.json
@@ -6,11 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "dYfiSvvXosygDgSngezsSTqoamRIuWASNmHtCsZDfwCltrAMtA"
+  },
   "ConnectionStrings": {
     "Officer": "Server=localhost;Database=officer;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
     "DamarisMySqlReadWrite": "Server=localhost;Database=damaris_GE2;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
     "DamarisMySqlReadOnly": "Server=localhost;Database=damaris_GE2;Uid=CosminArmenean;Pwd=@CAvp57rt26;",
-    "WatchDogPostGreSql": "Server=localhost;Port=5433;Database=epitomelogger_prod;User Id=dataserviceuser;Password ='DataServiceUser';Integrated Security=true;Pooling=true;"
+    "WatchDogPostGreSql": "Server=localhost;Port=5433;Database=officerlogger_prod;User Id=logdevuser;Password ='Army1122';Integrated Security=true;Pooling=true;"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092",
@@ -25,15 +28,5 @@
       "RetriesBackoffMs": 100,
       "MaxInFlight": 5
     }
-  },
-  "JwtConfig": {
-    "Secret": "qikgotwbdngcnzzgzarocjthyzddlxfw",
-    "ExpiryTimeFrame": "00:01:30"
-  },
-  "IdentityServer": {
-    "Authority": "http://localhost:5050",
-    "ClientId": "your-client-id",
-    "ClientSecret": "your-client-secret"
-    // Other configuration settings
   }
 }
