--- a/KafkaCommunicationLibrary/KafkaCommunicationLibrary.csproj
+++ b/KafkaCommunicationLibrary/KafkaCommunicationLibrary.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Silverback.Integration.Kafka" Version="4.3.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
